--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -21,19 +21,22 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <!-- <a class="navbar-brand">Navbar</a> -->
-                <form class="form-inline search">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-                </form>
                 <div class="avatar row">
                     <div class="col-3 pr-1 pl-0">
                         <img src="/images/avatar.png" class="rounded-circle img-fluid"
                             style="width: 50px;height:50px ;" />
                     </div>
-                    <div class="col-5 name pl-0">
-                        <h6>User Name</h6>
-                        <h6>User Role</h6>
+                    <div class="user-info col-5 name pl-0">
+                        <h6 >User Name</h6>
+                        <h6 >User Role</h6>
                     </div>
+                </div>
+                <form class="form-inline search">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                <div class="text-center">
+                    <img src="/images/tu-logo.png" class="img-fluid logo" style="width: 50px;height:50px ;" />
                 </div>
             </div>
 
@@ -49,9 +52,6 @@
         </div>
         <div class="content row bg-light">
             <ul class="col-2 sidebar list-group shadow-sm">
-                <div class="mb-4 mt-2 text-center">
-                    <img src="/images/tu-logo.png" class="img-fluid logo" style="width: 70px;height:70px ;" />
-                </div>
                 <li class="p-3 mb-2 list-group-item">
                     <a class="sidebar-link " href="/pages/index.html">
                         <i class='bx bxs-dashboard'></i><span>Dashboard</span>
