--- a/pages/tables.html
+++ b/pages/tables.html
@@ -17,9 +17,6 @@
     <div class="page">
         <nav class="navbar navbar-light bg-light shadow-sm">
             <div class="container">
-                <button class="navbar-toggler" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
                 <!-- <a class="navbar-brand">Navbar</a> -->
                 <div class="avatar row">
                     <div class="col-3 pr-1 pl-0">
@@ -27,8 +24,8 @@
                             style="width: 50px;height:50px ;" />
                     </div>
                     <div class="user-info col-5 name pl-0">
-                        <h6 >User Name</h6>
-                        <h6 >User Role</h6>
+                        <h6>User Name</h6>
+                        <h6>User Role</h6>
                     </div>
                 </div>
                 <form class="form-inline search">
@@ -36,14 +33,14 @@
                     <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
                 </form>
                 <div class="text-center">
-                    <img src="/images/tu-logo.png" class="img-fluid logo" style="width: 50px;height:50px ;" />
+                    <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
                 </div>
             </div>
 
 
         </nav>
         <div class="profil-box">
-            <div class="shadow bg-white rounded p-3">
+            <div class="shadow bg-white rounded">
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item text-center"><a href="/pages/formsInputs.html">Settings</a></li>
                     <li class="list-group-item text-center"><a href="/pages/login.html">Sign in</a></li>
@@ -133,7 +130,7 @@
                     </table>
                 </div>
                 <div class="bg-white mt-5">
-                    <table class="table table-striped p-3 shadow rounded">
+                    <table class="table table-striped p-3 shadow rounded text-center">
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -147,53 +144,62 @@
                                 <th scope="row">1</th>
                                 <td>Mark</td>
                                 <td>Otto</td>
-                                <td><button type="button" class="btn btn-warning rounded-pill">Action</button></td>
+                                <td>
+                                    <button type="button" class="btn btn-warning rounded-pill" style="width: 70px;">edit</button>
+                                    <button type="button" class="btn btn-danger rounded-pill" style="width: 70px;">delete</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
                                 <td>Jacob</td>
                                 <td>Thornton</td>
-                                <td><button type="button" class="btn btn-warning rounded-pill">Action</button></td>
+                                <td>
+                                    <button type="button" class="btn btn-warning rounded-pill" style="width: 70px;">edit</button>
+                                    <button type="button" class="btn btn-danger rounded-pill" style="width: 70px;">delete</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
                                 <td>Larry</td>
                                 <td>the Bird</td>
-                                <td><button type="button" class="btn btn-warning rounded-pill">Action</button></td>
+                                <td>
+                                    <button type="button" class="btn btn-warning rounded-pill" style="width: 70px;">edit</button>
+                                    <button type="button" class="btn btn-danger rounded-pill" style="width: 70px;">delete</button>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="bg-white mt-5">
-                <table class="table table-hover p-3 shadow rounded">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                    <table class="table table-hover p-3 shadow rounded">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td colspan="2">Larry the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
 
 
