--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -17,9 +17,6 @@
     <div class="page">
         <nav class="navbar navbar-light bg-light shadow-sm">
             <div class="container">
-                <button class="navbar-toggler" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <!-- <a class="navbar-brand">Navbar</a> -->
                 <div class="avatar row">
                     <div class="col-3 pr-1 pl-0">
@@ -36,14 +33,14 @@
                     <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
                 </form>
                 <div class="text-center">
-                    <img src="/images/tu-logo.png" class="img-fluid logo" style="width: 50px;height:50px ;" />
+                    <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
                 </div>
             </div>
 
 
         </nav>
         <div class="profil-box">
-            <div class="shadow bg-white rounded p-3">
+            <div class="shadow bg-white rounded">
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item text-center"><a href="/pages/formsInputs.html">Settings</a></li>
                     <li class="list-group-item text-center"><a href="/pages/login.html">Sign in</a></li>
@@ -164,23 +161,23 @@
                     <div class="row">
                         <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
                             <div class="bg-light p-2 mt-3 rounded text-center">
-                                <h6 class="">2023-01-01</h6>
+                                <p class="date-time">2023-01-01</p>
                             </div>
                         </div>
                         <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
                             <div class="bg-light p-2 mt-3 rounded text-center">
-                                <h6 class="">January 1, 2023</h6>
+                                <p class="date-time">January 1, 2023</p>
                             </div>
                         </div>
                         <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
                             <div class="bg-light p-2 mt-3 rounded text-center">
-                                <h6 class="">8:45 AM</h6>
+                                <p class="date-time">8:45 AM</p>
                             </div>
                         </div>
                         <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
                             <div class="bg-light p-2 mt-3 rounded text-center">
-                                <h6 class="">2023-01-01 8:45
-                                </h6>
+                                <p class="date-time">2023-01-01 8:45
+                                </p>
                             </div>
                         </div>
                     </div>
