--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -17,9 +17,6 @@
     <div class="page">
         <nav class="navbar navbar-light bg-light shadow-sm">
             <div class="container">
-                <button class="navbar-toggler" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
                 <!-- <a class="navbar-brand">Navbar</a> -->
                 <div class="avatar row">
                     <div class="col-3 pr-1 pl-0">
@@ -43,7 +40,7 @@
 
         </nav>
         <div class="profil-box">
-            <div class="shadow bg-white rounded p-3">
+            <div class="shadow bg-white rounded">
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item text-center"><a href="/pages/formsInputs.html">Settings</a></li>
                     <li class="list-group-item text-center"><a href="/pages/login.html">Sign in</a></li>
@@ -52,9 +49,6 @@
         </div>
         <div class="content row bg-light">
             <ul class="col-2 sidebar list-group shadow-sm">
-                <div class="mb-4 mt-2 text-center">
-                    <img src="/images/tu-logo.png" class="img-fluid logo" style="width: 70px;height:70px ;" />
-                </div>
                 <li class="p-3 mb-2 list-group-item">
                     <a class="sidebar-link " href="/pages/index.html">
                         <i class='bx bxs-dashboard'></i><span>Dashboard</span>
