--- a/pages/login.html
+++ b/pages/login.html
@@ -13,145 +13,187 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
-<body>
-    <div class="page">
-        <nav class="navbar navbar-light bg-light shadow-sm">
-            <div class="container">
-                <!-- <a class="navbar-brand">Navbar</a> -->
-                <div class="avatar row">
-                    <div class="col-3 pr-1 pl-0">
-                        <img src="/images/avatar.png" class="rounded-circle img-fluid"
-                            style="width: 50px;height:50px ;" />
-                    </div>
-                    <div class="user-info col-5 name pl-0">
-                        <h6 >User Name</h6>
-                        <h6 >User Role</h6>
-                    </div>
+<body style="height: 100%;">
+    <nav class="navbar navbar-light bg-light shadow-sm bg-dark">
+        <div class="container">
+            <!-- <button class="navbar-toggler" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button> -->
+            <!-- <a class="navbar-brand">Navbar</a> -->
+            <div class="avatar row">
+                <div class="col-3 pr-1 pl-0">
+                    <img src="/images/user-solid-60.png" class="rounded-circle img-fluid" />
                 </div>
-                <form class="form-inline search">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                <div class="text-center">
-                    <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
+                <div class="user-info col-5 name pl-0">
+                    <h6>User Name</h6>
+                    <h6>User Role</h6>
                 </div>
             </div>
-        </nav>
-        <div class="profil-box">
-            <div class="shadow bg-white rounded">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item text-center"><a href="/pages/formsInputs.html">Settings</a></li>
-                    <li class="list-group-item text-center"><a href="/pages/login.html">Sign in</a></li>
-                </ul>
+            <form class="form-inline search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <div class="text-center">
+                <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
             </div>
+
         </div>
-        <div class="content row bg-light">
-            <ul class="col-2 sidebar list-group shadow-sm">
-                <li class="p-3 mb-2 list-group-item">
-                    <a class="sidebar-link " href="/pages/index.html">
-                        <i class='bx bxs-dashboard'></i><span>Dashboard</span>
-                    </a>
-                </li>
-                <li class="p-3 mb-2 list-group-item">
-                    <a class="sidebar-link" href="#0">
-                        <i class='bx bx-bar-chart-alt'></i><span>Statistics</span>
-                    </a>
-                </li>
-                <li class="p-3 mb-2 list-group-item">
-                    <a class="sidebar-link" href="/pages/calendar.html">
-                        <i class='bx bx-calendar'></i><span>Calendar</span>
-                    </a>
-                </li>
-                <li class="p-3 mb-2 list-group-item">
-                    <a class="forms sidebar-link dropdown-toggle">
-                        <i class='bx bxs-layout'></i><span>Forms</span>
-                    </a>
-                    <ul class="menu list-group list-group-flush">
-                        <li class="list-group-item text-center"><a href="/pages/formsInputs.html">Inputs</a></li>
-                        <li class="list-group-item text-center"><a href="/pages/layouts.html">Layouts</a></li>
-                        <li class="list-group-item text-center"><a href="/pages/login.html">Sign in</a></li>
-                        <li class="list-group-item text-center"><a href="/pages/login.html">Sign Up</a></li>
-                    </ul>
-                </li>
-                <li class="p-3 mb-2 list-group-item">
-                    <a class="sidebar-link" href="/pages/fonts.html">
-                        <i class='bx bxs-edit'></i><span>Fonts</span>
-                    </a>
-                </li>
-                <li class="p-3 mb-2 list-group-item">
-                    <a class="sidebar-link" href="/pages/tables.html">
-                        <i class='bx bx-table'></i><span>Tables</span>
-                    </a>
-                </li>
-                <li class="p-3 mb-2 list-group-item">
 
-                    <a class="sidebar-link" href="#0">
-                        <i class='bx bxs-cog'></i><span>Settings</span>
-                    </a>
-                </li>
 
+    </nav>
+    <div class="profil-box mb-4">
+        <div class="shadow bg-dark rounded">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center bg-dark"><a href="/pages/formsInputs.html">Settings</a></li>
+                <li class="list-group-item text-center bg-dark"><a href="/pages/login.html">Sign in</a></li>
             </ul>
-            <div class="col container">
+        </div>
+    </div>
+    <div class="page row bg-light">
+        <ul class="col-2 sidebar shadow-sm bg-dark">
+            <li class="p-3 mb-2">
+                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                    <a class="sidebar-link text-light " href="/pages/index.html">
+                        <i class='bx bxs-dashboard text-light'></i><span>Dashboard</span>
+                    </a>
+                </div>
+            </li>
+            <li class="p-3 mb-2">
+                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                    <a class="sidebar-link text-light" href="/pages/statistics.html">
+                        <i class='bx bx-bar-chart-alt text-light'></i><span>Statistics</span>
+                    </a>
+            </li>
+            <li class="p-3 mb-2">
+                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                    <a class="sidebar-link text-light" href="/pages/calendar.html">
+                        <i class='bx bx-calendar text-light'></i><span>Calendar</span>
+                    </a>
+                </div>
+            </li>
+            <li class="p-3 mb-2">
+                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                    <!-- <a class="sidebar-link" href="#0">
+                    
+                </a> -->
+                    <a class="forms sidebar-link text-light d-flex justify-content-around mb-1">
+
+                        <div><i class='bx bxs-layout text-light'></i>Forms</div>
+
+                        <div class="pl-4 dropdown-toggle"></div>
+
+                    </a>
+                </div>
+
+                <ul class="menu list-group list-group-flush" style="display: block;">
+                    <hr />
+                    <li class="sidebar-item text-center bg-dark rounded-pill pb-1"><a class="text-light"
+                            href="/pages/formsInputs.html">Inputs</a>
+                    </li>
+                    <li class="sidebar-item text-center bg-dark rounded-pill pb-1"><a class="text-light"
+                            href="/pages/layouts.html">Layouts</a></li>
+                    <li class="sidebar-item text-center bg-dark rounded-pill pb-1 active"><a class="text-light"
+                            href="/pages/login.html">Sign in</a></li>
+                    <li class="sidebar-item text-center bg-dark rounded-pill"><a class="text-light"
+                            href="/pages/login.html">Sign Up</a></li>
+                    <hr />
+                </ul>
+            </li>
+            <li class="p-3 mb-2">
+                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                    <a class="sidebar-link text-light" href="/pages/fonts.html">
+                        <i class='bx bxs-edit text-light'></i><span>Fonts</span>
+                    </a>
+                </div>
+            </li>
+            <li class="p-3 mb-2">
+                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                    <a class="sidebar-link text-light" href="/pages/tables.html">
+                        <i class='bx bx-table text-light'></i><span>Tables</span>
+                    </a>
+                </div>
+            </li>
+            <li class="p-3 mb-2">
+                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+
+                    <a class="sidebar-link text-light" href="/pages/settings.html">
+                        <i class='bx bxs-cog text-light'></i><span>Settings</span>
+                    </a>
+                </div>
+            </li>
+
+        </ul>
+        <div class="col-10 content px-0">
+            <div class="container px-5">
                 <div class="login-form mt-5 mb-5 shadow bg-white rounded p-4 mx-auto">
                     <form>
                         <div class="form-group">
-                          <label for="exampleInputEmail1">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Enter email">
                         </div>
                         <div class="form-group">
-                          <label for="exampleInputPassword1">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1"
+                                placeholder="Password">
                         </div>
                         <div class="form-check">
-                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                          <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Remember me</label>
                         </div>
                         <div class="text-center">
                             <button type="submit" class="btn btn-primary mt-2 mb-4">Login</button>
-                            <p className="text-light text-center">Don’t have an account? <a class="signUp-link" href="#">Sign Up</a></p>
+                            <p className="text-light text-center">Don’t have an account? <a class="signUp-link"
+                                    href="#">Sign Up</a></p>
                             <p className="text-light text-center"><a href="#">Forgot Password?</a></p>
                         </div>
-                      </form>
+                    </form>
                 </div>
                 <div class="registration-form mt-5 mb-5 shadow bg-white rounded p-4 mx-auto">
                     <form>
                         <div class="form-group">
                             <label for="exampleInputName">Name</label>
-                            <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp" placeholder="Enter You'r Name">
-                          </div>
-                        <div class="form-group">
-                          <label for="exampleInputEmail1">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                            <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp"
+                                placeholder="Enter You'r Name">
                         </div>
                         <div class="form-group">
-                          <label for="exampleInputPassword1">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1"
+                                placeholder="Password">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPasswordConfirm">Confirm Password</label>
-                            <input type="password" class="form-control" id="exampleInputPasswordConfirm" placeholder="Password">
-                          </div>
+                            <input type="password" class="form-control" id="exampleInputPasswordConfirm"
+                                placeholder="Password">
+                        </div>
                         <div class="text-center">
                             <button type="submit" class="btn btn-primary mt-2 mb-4">Sign Up</button>
-                            <p className="text-light text-center">Have an account? <a class="login-link" href="#">Login</a></p>
+                            <p className="text-light text-center">Have an account? <a class="login-link"
+                                    href="#">Login</a></p>
                         </div>
-                      </form>
+                    </form>
                 </div>
             </div>
+            <footer class="page-footer bg-white text-center footer-position">
+                <div class="footer-copyright text-center py-3">
+                    Taibah University - Deanship of Information Technology © 2022
+                </div>
+            </footer>
         </div>
-        <footer class="page-footer text-center footer-position">
-            <div class="footer-copyright text-center py-3">
-                Taibah University - Deanship of Information Technology © 2022
-            </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-            crossorigin="anonymous"></script>
-        <script src="/js/jquery-3.6.1.min.js"></script>
-        <script src="/js/index.js"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+    <script src="/js/jquery-3.6.1.min.js"></script>
+    <script src="/js/index.js"></script>
     </div>
 </body>
 
