--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -29,7 +28,10 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
             </form>
-            <div class="text-center">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="text-center ml-1">
                 <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
             </div>
         </div>
@@ -46,30 +48,30 @@
     <div class="page row bg-light">
         <ul class="col-2 sidebar shadow-sm bg-dark">
             <li class="p-3 mb-2">
-                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1 active">
+                <div class="rounded-pill sidebar-item pt-1 pb-1 active">
                     <a class="sidebar-link text-light " href="/pages/index.html">
                         <i class='bx bxs-dashboard text-light'></i><span>Dashboard</span>
                     </a>
                 </div>
             </li>
             <li class="p-3 mb-2">
-                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                <div class="rounded-pill sidebar-item pt-1 pb-1">
                     <a class="sidebar-link text-light" href="/pages/statistics.html">
                         <i class='bx bx-bar-chart-alt text-light'></i><span>Statistics</span>
                     </a>
             </li>
             <li class="p-3 mb-2">
-                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                <div class="rounded-pill sidebar-item pt-1 pb-1">
                     <a class="sidebar-link text-light" href="/pages/calendar.html">
                         <i class='bx bx-calendar text-light'></i><span>Calendar</span>
                     </a>
                 </div>
             </li>
             <li class="p-3 mb-2">
-                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                <div class="rounded-pill sidebar-item pt-1 pb-1">
                     <a class="forms sidebar-link text-light d-flex justify-content-around mb-1">
-                        <div><i class='bx bxs-layout text-light'></i>Forms</div>
-                        <div class="pl-4 dropdown-toggle"></div>
+                        <i class='bx bxs-layout text-light'></i><span>Form</span>
+                        <div class="dropdown-toggle"></div>
                     </a>
                 </div>
                 <ul class="menu list-group list-group-flush">
@@ -87,27 +89,27 @@
                 </ul>
             </li>
             <li class="p-3 mb-2">
-                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                <div class="rounded-pill sidebar-item pt-1 pb-1">
                     <a class="sidebar-link text-light" href="/pages/fonts.html">
                         <i class='bx bxs-edit text-light'></i><span>Fonts</span>
                     </a>
                 </div>
             </li>
             <li class="p-3 mb-2">
-                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+                <div class="rounded-pill sidebar-item pt-1 pb-1">
                     <a class="sidebar-link text-light" href="/pages/tables.html">
                         <i class='bx bx-table text-light'></i><span>Tables</span>
                     </a>
                 </div>
             </li>
-            <li class="p-3 mb-2">
-                <div class="rounded-pill sidebar-item pt-1 pb-1 ml-1">
+            <!-- <li class="p-3 mb-2">
+                <div class="rounded-pill sidebar-item pt-1 pb-1">
 
                     <a class="sidebar-link text-light" href="/pages/settings.html">
                         <i class='bx bxs-cog text-light'></i><span>Settings</span>
                     </a>
                 </div>
-            </li>
+            </li> -->
         </ul>
         <div class="col-10 content px-0">
             <div class="container mb-4 px-5">
@@ -193,17 +195,15 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script  type="text/javascript"  src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-        crossorigin="anonymous"></script>
-    <script src="/js/jquery-3.6.1.min.js"></script>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/js/index.js"></script>
+    <script  type="text/javascript"  src="/js/jquery-3.6.1.min.js"></script>
+    <script type="text/javascript" src="/js/index.js"></script>
 </body>
 
 </html>
