--- a/pages/layouts.html
+++ b/pages/layouts.html
@@ -33,6 +33,9 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="text-center">
                 <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
             </div>
@@ -78,9 +81,9 @@
                 </a> -->
                     <a class="forms sidebar-link text-light d-flex justify-content-around mb-1">
 
-                        <div><i class='bx bxs-layout text-light'></i>Forms</div>
+                        <i class='bx bxs-layout text-light'></i><span>Forms</span>
 
-                        <div class="pl-4 dropdown-toggle"></div>
+                        <div class="dropdown-toggle"></div>
 
                     </a>
                 </div>
